# easy-settings

./: .gitignore  Cargo.toml  LICENSE  README-ja.md  README.md  deny.toml
.github/workflows/: cargo-deny.yml  ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/helpers/: mod.rs
derive/src/registry/: mod.rs
docs/en/IntoSettingRow/: details.md
docs/en/RegistryNode/: details.md  is_category.md  is_setting_item.md  value.md
docs/en/Registry_Derive/: details.md
docs/en/Registry_Trait/: categories.md  child_nodes.md  details.md  get.md  get_item_type.md  get_with_default.md  items.md  keys.md  set.md  set_from_row.md  set_from_row_vec.md
docs/en/SettingManager/: apply.md  details.md  get_registry.md  get_tmp_registry.md  load.md  load_all.md  reset_tmp.md  save.md  save_and_apply.md  set_pool.md
docs/en/SettingManagerBuilder/: tablename.md
docs/en/SettingRow/: details.md  value.md
docs/en/SettingValue/: details.md  from_raw_string.md  raw_string.md
docs/ja/IntoSettingRow/: details.md
docs/ja/RegistryNode/: details.md  is_category.md  is_setting_item.md  value.md
docs/ja/Registry_Derive/: details.md
docs/ja/Registry_Trait/: categories.md  child_nodes.md  details.md  get.md  get_item_type.md  get_with_default.md  items.md  keys.md  set.md  set_from_row.md  set_from_row_vec.md
docs/ja/SettingManager/: apply.md  details.md  get_registry.md  get_tmp_registry.md  load.md  load_all.md  reset_tmp.md  save.md  save_and_apply.md  set_pool.md
docs/ja/SettingManagerBuilder/: tablename.md
docs/ja/SettingRow/: details.md  value.md
docs/ja/SettingValue/: details.md  from_raw_string.md  raw_string.md
migrations/: 20260412100221_easy_settings_create_settings_table_Yz4Gc.sql
src/: db.rs  lib.rs  registry.rs  setting_manager.rs
src/setting_managers/: mod.rs  sqlite.rs
tests/: auto_impl.rs  manual_impl.rs  object.rs  test.rs
