[package]
name = "easy-settings"
description = "Easily create a settings registry."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[workspace]
members = ["derive"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["saku-shirakura<saku@sakushira.com>"]
repository = "https://github.com/saku-shirakura/easy-settings"
rust-version = "1.92"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
chrono = "0.4"
thiserror = "2"
easy-settings-derive = { version = "0.0.1", path = "derive" }
