[package]
name = "easy-settings"
description = "Easily create a settings registry."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["config"]
keywords = ["settings"]

[features]
sqlite = ["sqlx/sqlite"]
tokio = ["sqlx/runtime-tokio"]

[workspace]
members = ["derive"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["saku-shirakura<saku@sakushira.com>"]
repository = "https://github.com/saku-shirakura/easy-settings"
rust-version = "1.92"

[dependencies]
serde = "1"
serde_json = "1"
sqlx = { version = "0.8", features = ["macros"] }
easy-settings-derive = { version = "0.2.0", path = "derive" }
tracing-unwrap = "1"
tracing = "0.1"
derive_builder = "0.20"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }

[[test]]
name = "test"
required-features = ["sqlite", "tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
