[package]
name = "easy-settings-derive"
description = "Implementation of the derive macro for easy-settings"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
fallible-iterator = "0.3.0"
